--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ body {
     max-width: 1440px;
     margin: 0 auto;
 }
+.section_info_all {
+    padding-top: 20px;
+}
+.section_color {
+    color: #1abc9c;
+}
+.hover_item:hover {
+    color: #293e49;
+}
 
 /* fonts------------------------------------------------------------------- */
 
@@ -39,15 +48,90 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 100px;
+    height: 80px;
 }
 .nav_item {
-    margin: 10px;
+    margin: 20px;
 }
 .nav_link {
     color: white;
     font-size: 18px;
+    padding: 5px;
 }
 .nav_link:hover {
-    border: 2px solid #1abc9c;
+    border-bottom: 3px solid #1abc9c;
 }
+.nav_link:active {
+    color: dimgrey;
+}
+
+/* main------------------------------------------------------------------- */
+
+.main_container {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
+}
+.section {
+    width: 50%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #293e49;
+    color: #293e49;
+    font-size: 18px;
+}
+.section_profile {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    padding: 50px 30px 30px;
+    border-bottom: 2px solid #293e49;
+}
+.section_profile_foto {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 60%);
+}
+.main_title {
+    color:#293e49;;
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+.subtitle {
+    color: #293e49;
+    font-size: 30px;
+    letter-spacing: 4px;
+}
+.section_title {
+    color: #293e49;
+    font-size: 30px;
+    letter-spacing: 4px;
+}
+
+/* footer------------------------------------------------------------------- */
+
+.footer {
+    background-color: #293e49;
+    height: 80px;
+    color: white;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+}
+.github {
+    color: white;
+    padding-left: 20px;
+}
+.github:hover {
+    color: #1abc9c;
+}
+@media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+}
+
