--- a/style.css
+++ b/style.css
@@ -43,10 +43,12 @@ body {
 
 .header {
     background-color: #293e49;
+    overflow:scroll;
 }
 .nav_list {
     display: flex;
     justify-content: flex-end;
+    flex-wrap:wrap;
     align-items: center;
     height: 80px;
 }
@@ -82,6 +84,7 @@ body {
 }
 .section_profile {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     width: 100%;
@@ -129,9 +132,32 @@ body {
 .github:hover {
     color: #1abc9c;
 }
+@media (max-width: 1440px) {
+    .section {
+        padding: 20px 20px 20px 20px;
+    }
+}
 @media (max-width: 768px) {
     .section {
       width: 100%;
     }
 }
+@media (max-width: 768px) {
+    .section_profile_title {
+        padding-left: 30px;
+    }
+}
+@media (max-width: 768px) {
+    .section {
+        padding-left: 20px;
+    }
+}
 
+@media (max-width: 375px) {
+    .header {
+        width: 500px;
+    }
+    .footer {
+        width: 500px;
+    }
+}
